# cosmogonic-quantum-mechalogodrom

./: .gitattributes  .gitignore  .prettierignore  .prettierrc  .sync-receipts.cjs  AGENTS-2026-06-26.md  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HANDOFF-2026-06-26.md  HANDOFF.md  LICENSE  NOTICE.md  README.md  ROADMAP-2026-06-26.md  ROADMAP.md  SECURITY.md  THIRD-PARTY-NOTICES.md  TSOTCHKE_BIOLOGICS_GROWTH_RECEIPT.txt  alife-gallery.js  bible.html  bunfig.toml  check-out.txt  docs.html  index.html  indexdiff.txt  package.json  release-notes-v0130.md  research_receipts-2026-06-26.md  research_receipts.md  scratch_update.py  server.ts  specs.html  tsconfig.json
.claude/: launch.json
.githooks/: post-commit  pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  xenomimic_report.yml
.github/codeql/: codeql-config.yml
.github/workflows/: auto-tag.yml  ci.yml  codeql.yml  golden-hash.yml  pages.yml  release.yml
.memory/: decisions-2026-06-26.md  decisions.md  instructions-2026-06-26.md  instructions.md  preferences-2026-06-26.md  preferences.md  quirks-2026-06-26.md  quirks.md  security-2026-06-26.md  security.md
bench/: algorithms.bench.ts  big-tree-ecology.bench.ts  crystal-ecosystem.bench.ts  eshkol-ad.bench.ts  games.bench.ts  heap.bench.ts  index.ts  motion-interpolation.bench.ts  perceptual-p  perceptual-priority.bench.ts  quantization.bench.ts  quantum-classical.bench.ts  quantum.bench.ts  reaction-diffusion.bench.ts  rng.bench.ts  scalar.bench.ts  scale.ts  spatial-hash.bench.ts  super-mind.bench.ts
docs/: 5-PASS-DOCUMENTATION-UPDATE-STRATEGY-2026-07-07.md  500-POINT-INSPECTION-2026-06-26.md  500-POINT-INSPECTION.md  AI-SUBSYSTEM-2026-06-26.md  AI-SUBSYSTEM.md  APEX-1B-SUBSTRATE-ARCHITECTURE-2026-07-01.md  APEX-ABOMINATION-NOVELTY-DOCTRINE-2026-06-26.md  APEX-ABOMINATION-NOVELTY-DOCTRINE.md  APEX-BRAIN-ABOMINATION-2026-06-26.md  APEX-BRAIN-ABOMINATION.md  APEX-BRAIN-CORPUS-100-PAPERS-2026-06-26.md  APEX-BRAIN-CORPUS-100-PAPERS.md  ARCHITECTURE-2026-06-26.md  ARCHITECTURE.md  AUDIT-LOG.md  BENCHMARKS-2026-06-26.md  BENCHMARKS.md  BLEEDING-EDGE-NOVEL-CONTRIBUTIONS-AND-SCIENTIFIC-IMPACT-2026-06-26.md  BLEEDING-EDGE-NOVEL-CONTRIBUTIONS-AND-SCIENTIFIC-IMPACT.md  BOOK-2026-06-26.md  BOOK.md  BRAIN-NEUROLOGY-CONSCIOUSNESS-ENGINEERING-ASSESSMENT-2026-07-06.md  BRAIN-PARAMETER-SCALE-PLAN.md  COMPLEXITY-2026-06-26.md  COMPLEXITY.md  COMPREHENSIVE-NHSI-AUDIT-2026-06-21.md  CONSCIOUSNESS-GLOSSARY-INDEX-2026-07-03.md  CONSCIOUSNESS-LAB-12-REPORT-CONSOLIDATION-2026-07-03.md  CONSCIOUSNESS-LAB-DEEP-RESEARCH-2026-07-03.md  CONSCIOUSNESS-LAB-FRONTIER-OUTLIER-STACK-2026-07-03.md  CONSCIOUSNESS-LAB-MASTER-2026-07-03.md  CONSOLIDATED-22-FILE-AUDIT-CURRENT-2026-07-07.html  CONSOLIDATED-22-FILE-AUDIT-CURRENT-2026-07-07.md  CONSOLIDATED-22-MASTER-ASSESSMENT-CURRENT-2026-07-07.html  CONSOLIDATED-22-MASTER-ASSESSMENT-CURRENT-2026-07-07.md  CONTROLS-2026-06-26.md  CONTROLS.md  COPILOT-PROVIDERS-2026-06-26.md  COPILOT-PROVIDERS.md  CORPUS_INTEGRATION_REPORT-2026-06-26.md  (+105 more)
docs/DAILY_RUNS/: 2026-06-16-0030.md  2026-06-30-1554.md
docs/adr/: 0001-bun-runtime-2026-06-26.md  0001-bun-runtime.md  0002-threejs-rendering-2026-06-26.md  0002-threejs-rendering.md  0003-htmx-tailwind-ui-2026-06-26.md  0003-htmx-tailwind-ui.md  0004-deterministic-rng.md  (+19 more)
lab/: brain-assessment-fusion.html  consciousness-data.json  consciousness.html  quantum-wildbeyond.html  sentience-data.json  sentience.html
masters/: GALAXOGONIC-WARHAMMER-POWER-MODE-DR-MANHATTAN.xml  LEGENDARY-SUPER-SAIYAN-BROLY-MANIFESTO.xml  ORACLE-ARCHITECT-OF-THE-DARKSIDE-STARKILLER.xml
native/: CMakeLists.txt  README.md  build.ps1
native/apex/: README.md  apex_golden.cpp  apex_kernels.hpp
native/src/: gl_core.cpp  gl_core.h  main.cpp  physics.h  physics_jolt.h  shaders.h
scripts/: add-missing-quantization.ts  alife-codeground-sensitivity.ts  alife-comparison-geometry.ts  alife-comparison-stats.ts  apex-substrate-demo.ts  bench-nhi-current-grid.ts  bmp2png.ts  browser-visual-smoke-raf-gate.ts  browser-visual-smoke.ts  build-pages.ts  build.ts  canonical-receipts.ts  canonical.ts  check-generated.ts  codebase-metrics.ts  decode-capture.ts  fix-all-quality-objects.ts  fix-all-remaining.ts  fix-audit-casts.ts  fix-broken-rng.ts  fix-final-commas.ts  fix-remaining-commas.ts  gen-alife-embed.ts  gen-bible-corpus.ts  gen-consciousness-lab-data.ts  gen-filemap.ts  harvest-tsotchke-corpus.ts  install-hooks.ts  lab-data-json.ts  launch-oppengrok.ps1  markup-escape.ts  normalize-docs.ts  organism-intelligence-benchmark.ts  organism-intelligence-v4-benchmark.ts  organism-intelligence-v4-protocol.ts  p1-quantum-classical-experiment.ts  pages-smoke-server.ts  reproduce.ts  sbom.ts  scan-encoding.ts  (+8 more)
src/: alife-gallery-boot.ts  alife-metrics-gallery.ts  browser-globals.d.ts  docs-page.ts  main.ts  satellite-music.ts  specs-page.ts  types.ts  world.ts
terminals/: 1.txt
tests/: README.md  a11y-static.test.ts  access-code.test.ts  active-inference.test.ts  ad-forager-baseline.test.ts  ad-mlp-curvature.test.ts  ad-mlp-learning.test.ts  ai-sandbox.test.ts  algorithms.test.ts  alien-flora.test.ts  alife-codeground-consistency.test.ts  alphabet-pantheon-render.test.ts  alphabet-pantheon.test.ts  analytics.test.ts  apex-brain-learning.test.ts  apex-brain.test.ts  apex-cadence.test.ts  apex-consciousness-scaffold.test.ts  apex-field-organs.test.ts  apex-field-substrate.test.ts  apex-harness.test.ts  apex-native-backend.test.ts  apex-novelty.test.ts  apex-offworld-score.test.ts  apex-parameter-manifold.test.ts  apex-quantum-substrate.test.ts  apex-rarity.test.ts  apex-substrate-ablation.test.ts  apex-substrate-driver.test.ts  apex-substrate-visual.test.ts  apex-thought-variations.test.ts  artifacts.test.ts  atmosphere.test.ts  attention-controller.test.ts  audio-analysis.test.ts  audio-engine.test.ts  audit-2026-06-25-regression.test.ts  audit.test.ts  behaviors.test.ts  belief-propagation.test.ts  (+357 more)
(+453 files in other folders)
